try fix for header overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@
     padding: 0;
     margin: 0;
     font-family: "Roboto", sans-serif;
+    /* overflow: hidden; */
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    /* flex: 1 1 100%; */
 }
 
 /* header section */
@@ -12,6 +19,8 @@
     display: flex;
     flex-direction: column;
     padding: 10px 100px 80px 100px;
+    /* max-height: fit-content; */
+    /* flex: 1 1 auto; */
 }
 
 /* header top portion */
@@ -43,15 +52,17 @@ a, .hero-secondary {
 .header-bottom {
     display: flex;
     justify-content: space-between;
-    flex: 1;
+    /* flex: 1 1 100%; */
     max-height: 200px;
     gap: 60px;
+    /* flex-wrap: wrap; */
 }
 
 .hero-main {
     color: #f9faf8;
     font-size: 48px;
     font-weight: 900;
+    /* flex-shrink: 1; */
 }
 
 .hero-image {
@@ -65,6 +76,7 @@ a, .hero-secondary {
     flex-direction: column;
     gap: 10px;
     width: 500px;
+    /* flex-shrink: 1; */
 }
 
 .sign-up {
